# ghg_fastapi

./: .bandit.yml  .gitignore  113年2月5日公告溫室氣體排放係數 (11).ods  CI_README.md  Dockerfile  EOCR.py  GASOCR.py  GOCR.py  OCR.py  TODO.md  audit_log.py  auth_utils.py  awf.txt  database.db  database.db-journal  database.db.backup.20260628_103210  database.py  db_results.json  dependencies.py  env.template.txt  file_utils.py  gasprice.xlsx  import_GasData.py  main.py  model.py  ods_alt_appendix.txt  ods_alt_preview.txt  ods_analysis.txt  ods_lhv_sample.txt  ods_preview.txt  pyproject.toml  query_db.py  query_db2.py  requirements-dev.txt  requirements.txt  run_security_checks.ps1  run_security_checks.sh  temp_name.txt  tmp_boundary_js.js  台電系統發購電量及電力排碳係數(105-113) (1).csv  (+4 more)
alembic/: env.py
constants/: lhv_defaults.py  refrigerant_factors.py
ods_extracted/: meta.xml  styles.xml
routers/: activity.py  appendix.py  boundary.py  calculation.py  create.py  devices.py  documents.py  electricity.py  emission.py  emission_source.py  etl_script.py  factor_management.py  file_upload.py  gas_recognition.py  gasoline.py  get_water.py  gwp.py  gwplist.py  index.py  inventory_list.py  login.py  logout.py  logs.py  ocr_recognition.py  org_boundary.py  org_chart.py  register.py  report_editor.py  reports.py  result.py  set.py  test1.py  test2.py  utilityfactor.py  water_fee.py
services/: device_aggregator.py  emission_calculator.py  llm_writer.py  pdf_exporter.py  report_editor.py  report_generator.py
templates/: activity.html  appendix_management.html  base.html  boundary.html  etl.html  (+25 more)
(+57 files in other folders)
