[project]
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = "(venv|uploads|__pycache__)"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", "uploads", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
